# Djinn

./: .env.example  .gitignore  .prettierignore  .wp-env.json  CLAUDE.md  Makefile  README.md  composer.json  djinn.php  node_modules  package-lock.json  package.json  phpcs.xml  readme.txt  tailwind.config.js  tsconfig.json  webpack.config.js
.github/workflows/: release.yml
app/admin/: AdminApp.tsx  index.tsx
app/cave/: AccountTile.tsx  CapabilitiesTile.tsx  Cave.tsx  SpendTile.tsx  data.ts  index.tsx
app/gql/: schema.graphql  schema.ts  types.ts
app/lamp/: App.tsx  Sidebar.tsx  cards.tsx  chat.ts  index.tsx
app/shared/: api.ts  format.ts  highlight.tsx  markdown.tsx  mount.tsx  ui.tsx  url.ts  usePanelResize.ts
app/styles/: chrome.css  tailwind.css  tokens.css
assets/: admin.css  admin.js  cardo.css  cave.css  cave.js  components.css  components.js
docs/: PRIVACY-DISCLOSURE.md
pro/: djinn-pro.php
proxy/: .env.example  Cargo.toml  Dockerfile  README.md  package.json  server.js
proxy/migrations/: 0001_init.sql
proxy/src/: main.rs
schema/: admin.graphql
src/: Onboarding.php  Plugin.php  Settings.php
src/Admin/: AdminPage.php  Disclosure.php  IndexPage.php  UsagePage.php
src/Engine/: AgentLoop.php  RestRunner.php  SystemPrompt.php  Tools.php
src/Files/: Downloads.php
src/GraphQL/: BlockMarkup.php  Feature.php  PairingSchema.php  Registry.php  Resolvers.php  Runner.php  SchemaFactory.php
src/License/: LicenseClient.php
src/Provider/: AnthropicProvider.php  ClaudeMaxProvider.php  GeminiProvider.php  Http.php  ModelCatalog.php  (+9 more)
(+39 files in other folders)
