[package]
name = "djinn-proxy"
version = "0.1.0"
edition = "2021"
description = "Metered, OpenAI-compatible LLM gateway for the Djinn plugin's ORG edition."

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
